# gstreamer

subprojects/: sparkle-cdm-widevine.wrap  sparkle-cdm.wrap
subprojects/gst-plugins-bad/: meson_options.txt
subprojects/gst-plugins-bad/ext/: meson.build
subprojects/gst-plugins-bad/ext/emeopencdm/: gstopencdmdecryptor.c  meson.build
subprojects/gst-plugins-bad/gst-libs/gst/: meson.build
